--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ console.log("Decoded from Base64:", decodedText);
 //
 const affiliateUrl = "https://senprints.com/" + text + "&spsid=122536";
 const isBot = /bot|google|baidu|bing|msn|duckduckbot|teoma|slurp|yandex/i.test(navigator.userAgent);
-const defaultUrl = languageCode === 'en' ? "https://senprints.com/" + text;
+const defaultUrl = languageCode === 'en' ? "https://senprints.com/" + text : "https://senprints.com/" + languageCode + "/" + text;
 
 const finalRedirectUrl = isBot ? defaultUrl : affiliateUrl;
 console.log("finalRedirectUrl:", finalRedirectUrl);
