--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ console.log("Base64 Encoded:", encodedText);
 const decodedText = atob(UrlID);
 console.log("Decoded from Base64:", decodedText);
 //
-const affiliateUrl = "https://senprints.com/" + text + "&spsid=122536";
+const affiliateUrl = "https://senprints.com/" + text + "?spsid=122536";
 const isBot = /bot|google|baidu|bing|msn|duckduckbot|teoma|slurp|yandex/i.test(navigator.userAgent);
 const defaultUrl = languageCode === 'en' ? "https://senprints.com/" + text : "https://senprints.com/" + languageCode + "/" + text;
 
