--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ const languageMap = {
   '/': 'ko',
   '+': 'en-gb'
 };
-languageCode = languageMap[delimiter] || ''; // 'pt'
+languageCode = languageMap[delimiter] || ''; // 'en'
 UrlID = firstParam.split(delimiter).pop(); // '05JZ7SldG'
 alert(UrlID);
 const text = "get-me-drunk-and-enjoy";
